name: hsping
version: 0.1.0.0
synopsis: Educational ping program implemented with Haskell
description: See README.md
homepage:	https://github.com/NicholasAaronBrady/haskell-ping
author: NicholasAaronBrady
maintainer:	nicholas.aaron.brady@gmail.com
build-type:	Simple
cabal-version: >=1.10

executable hsping
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Ping
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
               , network == 2.6.3.2

